--- a/src/css/estilo-login.css
+++ b/src/css/estilo-login.css
@@ -5,12 +5,15 @@
     flex-direction: column;
 
 }
+body{
+    background-color: rgb(209, 209, 206) !important;
+}
 
 .aba-login {
     border: solid rgba(222, 211, 211, 0.666) 2px;
     background-color: #fff;
     margin:auto;
-    max-width: 25vw;
+    
     border-radius: 20px;
     box-shadow: 2px 2px 10px black;
     border-radius: 10px;
@@ -48,8 +51,9 @@
     border: solid rgba(222, 211, 211, 0.666) 2px;
     background-color: white; 
     margin: auto;
-    max-width: 30vw;
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 450px;
     border-radius: 20px;
     box-shadow: 2px 2px 10px black;
     border-radius: 20px;
@@ -88,9 +92,6 @@
 #nascimento, #cpf {
     width: 52.5%;
 }
-#logradouro{
-    width: 100%;
-}
 
 h6{
     margin-top: 20px;
@@ -98,7 +99,6 @@ h6{
 
 .esquecisenha{
     font-size: 12px;
-
     text-align: right;
   
 }
@@ -110,4 +110,67 @@ h6{
     right: 10px;
     top: 6px;
    
+}
+
+/* --------------------------------------------------------------------RESPONSIVEL LOGIN */
+@media ( max-width: 576px){
+
+    .principal-login{
+        width: 96%;
+        margin: auto;
+    }
+    .cartao{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        width: 200px !important;
+    }
+
+    
+}
+
+
+
+/* --------------------------------------------------------------------RESPONSIVEL CADASTRO */
+@media ( max-width: 576px){
+
+
+    .cabecalho{
+        display: flex;
+        flex-direction: column !important;
+    }
+
+    .banner-cadastro{
+        display: none;
+    }
+    .principal-cadastro{
+        width: 95%;
+        height: 100vh;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content:space-between ;
+
+    }
+    
+
+    .aba-cadastroUsuario {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 10px;
+    
+    }
+    .aba-cadastro{
+        width: 320px;
+        padding: 10px !important;
+    }
+    .setorCadastro input{
+        width: 440px !important;
+        margin: 0;
+    }
+
+    
 }
