--- a/src/css/estiloitem.css
+++ b/src/css/estiloitem.css
@@ -1,3 +1,10 @@
+.aba-item{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .item-principal{
     display: flex;
     justify-content: center;
@@ -64,5 +71,49 @@
     padding: 15px 20px;
 }
 
+
+
+/* --------------------------------------------------------------------RESPONSIVEL ITEM */
+@media ( max-width: 576px){
+
+.aba-item{
+    width: 95%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+   
+    padding: 0px;
+}
+.item-principal{
+    width: 100%;
+    margin: auto;
+    padding: 0px;
+    
+   
+}
+
+h2{
+    font-size: 15px;
+    font-weight: bold;
+}
+.item-informacao{
+    flex-direction: column;
+    font-size: 12px;
+    align-items: center;    
+}
+
+.cabecalho{
+    display: flex;
+    flex-direction: column;
+}
+.item-imagem,.item-dados{
+    padding: 0px;
+    width: 300px;
+    
+}
+
+
+
+}
 
 
