--- a/src/css/estilo-login.css
+++ b/src/css/estilo-login.css
@@ -7,6 +7,7 @@
 }
 body{
     background-color: rgb(209, 209, 206) !important;
+
 }
 
 .aba-login {
@@ -25,11 +26,10 @@ body{
 .aba-login input{
     max-width: 140vw;
 }
-.aba-cadastroUsuario .setorCadastro input{
-    max-width: 40vw;
-}
+
 .aba-cadastro input {
     width: 100%;
+    
 }
 .aba-cadastro button {
     margin-top: 15px;
@@ -57,13 +57,11 @@ body{
     border-radius: 20px;
     box-shadow: 2px 2px 10px black;
     border-radius: 20px;
-    height: 400px;
+    height: 500px;
   
 }
 .aba-cadastroUsuario {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
     text-align: center;
     padding: 10px 40px;
 
@@ -87,10 +85,25 @@ body{
 }
 
 
+/* -----------------------------------------------------------------------------------------------LAYOUT */
+.qual-pet{
+    width: 350px;
+    display: flex;
+    justify-content: center;
+}
+.qual-pet div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 150px;
+
+}
+
 /* --------------------------------------------------------------------INFO-CADASTRO */
 
 #nascimento, #cpf {
-    width: 52.5%;
+    width: 40.5%;
+    margin: 10px 0px;
 }
 
 h6{
@@ -160,15 +173,16 @@ h6{
         flex-direction: column;
         align-items: center;
         text-align: center;
-        padding: 10px;
+        padding:0px;
     
     }
     .aba-cadastro{
+        background-color: aqua;
         width: 320px;
-        padding: 10px !important;
+        padding: 0px !important;
     }
     .setorCadastro input{
-        width: 440px !important;
+        width: 100% !important;
         margin: 0;
     }
 
