--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -6,7 +6,14 @@
 body{
     background-color: beige;
 }
+/* .aba-principal{
+    background-image: url(../imagens/ossinho.jpg); 
+} */
 
+.titulox{
+    width: 450px;
+
+}
 .tela-atual{
     color: rgb(239, 75, 4);
 }
