--- a/src/css/estilos-produtos.css
+++ b/src/css/estilos-produtos.css
@@ -28,7 +28,23 @@ body{
 }
 /* ----------------------------------------------------FILTROS---------------------------------------------------------- */
 
+.desconto-feito{
+    text-decoration: line-through;
+    font-weight: 900;
+    color: rgb(157, 155, 155);
 
+    
+ 
+}
+.preco{
+    font-size: 22px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 250px;
+    font-weight: 900;
+
+}
 
 
 /* ----------------------------------------------------PRODUTOS---------------------------------------------------------- */
@@ -36,7 +52,6 @@ body{
 .aba-produtos{
     background-color: rgb(241, 241, 241);;
     display: flex;
-    justify-content: space-evenly;
     flex-wrap: wrap;
     margin: 80px auto;
     padding: 20px;
@@ -46,13 +61,15 @@ body{
 
 
 .produto{
+    border: solid 1px rgb(224, 224, 224);
     width: 250px;
-    margin: 20px;
+    margin: 10px;
     border-radius: 10px;
     text-align: center;
 }
 .produto:hover{
-    background-color: rgb(255, 88, 16);
+    
+    background-color: rgb(250, 202, 181);
     box-shadow: #884000 0px 0px 2px 0px;
     transition: 500ms;
     color: #000;
