Ajuste de responsividade em todo o site e criação da area carrinho

--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -6,9 +6,9 @@
 body{
     background-color: beige;
 }
-/* .aba-principal{
-    background-image: url(../imagens/ossinho.jpg); 
-} */
+.aba-principal{
+    /* background-image: url(../imagens/ossinho2.jpg);  */
+}
 
 .titulox{
     width: 450px;
